syntax = "proto3";
package kyve.registry.v1beta1;

option go_package = "github.com/KYVENetwork/chain/x/registry/types";

// BundleProposal ...
message BundleProposal {
  // uploader ...
  string   uploader              = 1;
  // next_uploader ...
  string   next_uploader         = 2;
  // bundle_id ...
  string   bundle_id             = 3;
  // byte_size ...
  uint64   byte_size             = 4;
  // from_height ...
  uint64   from_height           = 5;
  // to_height ...
  uint64   to_height             = 6;
  // created_at ...
  uint64   created_at            = 7;
  // voters_valid ...
  repeated string voters_valid   = 8;
  // voters_invalid ...
  repeated string voters_invalid = 9;
}

// DelegationEntries ...
message DelegationEntries {
  // id ...
  uint64 id      = 1;
  // balance ...
  string balance = 2;
  // staker ...
  string staker  = 3;
  // k_index ...
  uint64 k_index = 4;
}

// DelegationPoolData ...
message DelegationPoolData {
  // Primary keys

  // id ...
  uint64 id     = 1;
  // staker ...
  string staker = 2;

  // F1Distribution

  // current_rewards ...
  uint64 current_rewards  = 3;
  // total_delegation ...
  uint64 total_delegation = 4;
  // latest_index_k ...
  uint64 latest_index_k   = 5;

  // Stats

  // delegator_count ...
  uint64 delegator_count               = 6;
  // latest_index_was_undelegation ...
  bool   latest_index_was_undelegation = 7;
}

// Delegator ...
message Delegator {
  // id ...
  uint64 id                = 1;
  // k_index ...
  uint64 k_index           = 2;
  // delegation_amount ...
  uint64 delegation_amount = 3;
  // staker ...
  string staker            = 4;
  // delegator ...
  string delegator         = 5;
}

// Funder ...
message Funder {
  // account ...
  string account = 2;
  // fund_id ...
  uint64 pool_id = 1;
  // amount ...
  uint64 amount  = 3;
}

// Pool ...
message Pool {
  // id ...
  uint64 id       = 1;
  // creator ...
  string creator  = 2;
  // name ...
  string name     = 3;
  // runtime ...
  string runtime  = 4;
  // logo ...
  string logo     = 5;
  // versions ...
  string versions = 6;
  // config ...
  string config   = 7;

  // height_archived ...
  uint64 height_archived      = 8;
  // bytes_archived ...
  uint64 bytes_archived       = 9;
  // total_bundles ...
  uint64 total_bundles        = 10;
  // total_bundle_rewards ...
  uint64 total_bundle_rewards = 11;

  // start_height ...
  uint64 start_height    = 12;
  // min_bundle_size ...
  uint64 min_bundle_size = 13;
  // operating_cost ...
  uint64 operating_cost  = 14;
  // paused ...
  bool   paused          = 15;

  // funders ...
  repeated string funders = 16;
  // lowest_funder ...
  string   lowest_funder  = 17;
  // total_funds ...
  uint64   total_funds    = 18;

  // stakers ...
  repeated string stakers = 19;
  // lowest_staker ...
  string   lowest_staker  = 20;
  // total_stake ...
  uint64   total_stake    = 21;
  // total_delegation ...
  uint64 total_delegation = 22;

  // bundle_proposal ...
  kyve.registry.v1beta1.BundleProposal bundle_proposal = 23;
}

// Proposal ...
message Proposal {
  // bundle_id ...
  string bundle_id    = 1;
  // pool_id ...
  uint64 pool_id      = 2;
  // uploader ...
  string uploader     = 3;
  // from_height ...
  uint64 from_height  = 4;
  // to_height ...
  uint64 to_height    = 5;
  // finalized_at ...
  uint64 finalized_at = 6;
}

// Staker ...
message Staker {
  // staker ...
  string account           = 1;
  // pool_id ...
  uint64 pool_id          = 2;
  // amount ...
  uint64 amount           = 3;
  // unbonding_amount ...
  uint64 unbonding_amount = 4;
  // commission ...
  string commission = 5;
  // moniker ...
  string moniker = 6;
  // website ...
  string website = 7;
  // logo
  string logo = 8;
}

// UnbondingEntries ...
message UnbondingEntries {
  // index ...
  uint64 index         = 1;
  // pool_id ...
  uint64 pool_id       = 2;
  // staker ...
  string staker        = 3;
  // delegator ...
  string delegator     = 4;
  // creation_time ...
  uint64 creation_time = 5;
  // amount ...
  uint64 amount        = 6;
}

// UnbondingState stores the state for the unbonding of stakes and delegations.
message UnbondingState {
  // low_index ...
  uint64 low_index  = 1;
  // high_index ...
  uint64 high_index = 2;
}
